--- a/index.html
+++ b/index.html
@@ -1,15 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Extra</title>
+    <script src="https://kit.fontawesome.com/481d53ac46.js" crossorigin="anonymous"></script>
+    <title>Home - Posadas Los Alamos</title>
 </head>
+
 <body>
     <header>
-        <h1>titulo</h1>
-        
+        <h1><img src="./img/LOS-ALAMOS-logo-min.png" alt=""></h1>
+        <nav>
+            <ul>
+                <li>contacto</li>
+                <li>reserva</li>
+                <li>|||</li>
+            </ul>
+        </nav>
     </header>
+
+    <main>
+        <form action="">
+            <div>
+                <input type="date">
+            </div>
+            <div>
+                <input type="date">
+            </div>
+            <div>
+                <select name="habitacion" id="">
+                    <option value="">habitacion 1</option>
+                    <option value="">hab 2</option>
+                    <option value="">hab 3</option>
+                </select>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+        </form>
+
+        <section>
+            <h2>arrepentimiento de compra</h2>
+            <p>Para compras en directo por web o telefónicas hasta 10 días de la fecha de compra. Resolución 424/2020
+                Secretaría de Comercio Interior.</p>
+        </section>
+
+        <section>
+            <h3>Hotel posadas Los Alamos</h3>
+            <p>
+
+                En Hotel Posada Los Álamos hallará el ámbito especial para que su estadía en El Calafate sea
+                inolvidable.
+                Cada espacio ha sido pensado para que usted disfrute al máximo de cada momento de su visita.
+
+                La Misión de brindar más y mejores servicios a nuestros huéspedes acompaña nuestro desarrollo.</p>
+        </section>
+        <button>reservar</button>
+
+        <!-- carril de coments -->
+
+        <section>
+            <h3>novedades</h3>
+            <!-- carril de novedades -->
+        </section>
+
+        <article>Habitaciones & Suites</article>
+        <article>Gastronomía</article>
+        <article>Golf El Pinar</article>
+        <article>Humus SPA</article>
+        <article>Hoteles Más Verdes</article>
+
+        <aside>
+            <h4>Seguinos en Instagram @posadalosalamos</h4>
+            <!-- carril de insta -->
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </aside>
+    </main>
+
+    <footer>
+        <img src="./img/LOS-ALAMOS-logo-min.png" alt="">
+        <p><i class="fa-brands fa-facebook"></i></p>
+        <p><i class="fa-brands fa-instagram"></i></p>
+        <p><i class="fa-solid fa-spider"></i></p>
+        <div>
+            <h4>HOTEL POSADA LOS ÁLAMOS</h4>
+        </div>
+        <div>
+            <h4>Menú Rápido</h4>
+        </div>
+        <div>
+            <h4>Novedades</h4>
+        </div>
+    </footer>
 </body>
+
 </html>
