--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
     <header>
         <h1><img src="./img/LOS-ALAMOS-logo-min.png" alt=""></h1>
+
         <nav>
             <ul>
                 <li>contacto</li>
-                <li>reserva</li>
+                <li><button class="header_btn">Reservar</button></li>
                 <li>|||</li>
             </ul>
         </nav>
+
     </header>
 
     <main>
